[package]
name = "slippi-db"
version = "0.1.0"
authors = ["Max Timkovich <max@timkovi.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
peppi = { git = "https://github.com/hohav/peppi" }
rayon = "1.5.0"
rusqlite = "0.25.1"
walkdir = "2.3.2"
