[package]
name = "slippi-db"
version = "0.1.0"
authors = ["Max Timkovich <max@timkovi.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
env_logger = "0.8.3"
log = "0.4.0"
peppi = { git = "https://github.com/hohav/peppi" }
rayon = "1.5.0"
rusqlite = { version = "0.25.1", features = ["bundled", "chrono"] }
walkdir = "2.3.2"
